fdo#58646 fix import of RTF_PAGE in cont section when having titlepg

Change-Id: Ia632edb24869ddfb76a029fdb460bcf24d9a2059