writerfilter/source/rtftok/rtfdocumentimpl.cxx
@@ -1644,7 +1644,9 @@ int RTFDocumentImpl::dispatchSymbol(RTFKeyword nKeyword)
             {
                 // If we're inside a continous section, we should send a section break, not a page one.
                 RTFValue::Pointer_t pBreak = m_aStates.top().aSectionSprms.find(NS_sprm::LN_SBkc);
-                if (pBreak.get() && !pBreak->getInt())
+                // Unless we're on a title page.
+                RTFValue::Pointer_t pTitlePg = m_aStates.top().aSectionSprms.find(NS_ooxml::LN_EG_SectPrContents_titlePg);
+                if ((pBreak.get() && !pBreak->getInt()) && !(pTitlePg.get() && pTitlePg->getInt()))
                 {
                     if (m_bWasInFrame)
                     {
